--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "ma-todolist",
     "version": "0.1.0",
+    "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
     "dependencies": {
         "body-parser": "~1.10.1",
         "cookie-session": "^1.3.2",
         "ejs": "~2.5.5",
         "express": "^4.16.4",
-        "multer": "^1.4.1",
-        "socket.io": "^2.2.0"
     },
     "author": "HardSpirit",
     "description": "Un gestionnaire de todolist ultra basique"
