--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js"},
     "dependencies": {
         "body-parser": "~1.10.1",
         "cookie-session": "^1.3.2",
