--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
         "body-parser": "~1.10.1",
         "cookie-session": "^1.3.2",
         "ejs": "~2.5.5",
-        "express": "^4.16.4",
+        "express": "^4.16.4"
     },
-    "engines":{"node":"11.6.0",
-    "npm":"6.5.x"},
+    "engines": {
+      "node":"11.6.0",
+      "npm":"6.5.x"
+    },
     "author": "HardSpirit",
     "description": "Un gestionnaire de todolist ultra basique",
     "scripts": {
-  "start": "node app.js"},
+      "start": "node app.js"
+    },
 }
